fix overflow

--- a/blocks/video-carousel/video-carousel.css
+++ b/blocks/video-carousel/video-carousel.css
@@ -1,6 +1,9 @@
 /* stylelint-disable no-descending-specificity */
 
 /* video-carousel css */
+.video-carousel {
+    overflow: auto;
+}
 
 .video-carousel .carousel-slide-image {
     margin: 0 auto;
